force-app/main/default/objects/Error_Log_Deletion_Batch_Settings__c/Error_Log_Deletion_Batch_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used as control settings for Error Log Deletion Batch</description>
    <label>Error_Log_Deletion_Batch_Settings</label>
</CustomObject>