force-app/main/default/objects/Error_Log_Deletion_Batch_Settings__c/fields/Days_To_Keep_Logs__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Keep_Logs__c</fullName>
    <description>The number of days Error Log records should be kept before deleting them.</description>
    <inlineHelpText>The number of days Error Log records should be kept before deleting them.</inlineHelpText>
    <label>Days to Keep Logss</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>