force-app/main/default/objects/Error_Log_Deletion_Batch_Settings__c/fields/Delete_From_Recycle_Bin__c.field-meta.xml
<CustomField>
    <fullName>Delete_From_Recycle_Bin__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Delete From Recycle Bin</label>
    <type>Checkbox</type>
</CustomField>